--- a/html5-playground/index.html
+++ b/html5-playground/index.html
@@ -4,19 +4,30 @@
     <meta charset="utf-8">
     <title>HTML Workshop!</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
-    <style>
-      body {
-        font-family: 'Roboto', sans-serif;
-      }
-    </style>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
   </head>
   <body>
+
+    <div id="hallo"></div>
    
+    <i class="fa fa-heart"></i>
+
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="100">
+      <path d="M108.4 0h23v22.8h21.2V0h23v69h-23V46h-21v23h-23.2M206 23h-20.3V0h63.7v23H229v46h-23M259.5 0h24.1l14.8 24.3L313.2 0h24.1v69h-23V34.8l-16.1 24.8l-16.1-24.8v34.2h-22.6M348.7 0h23v46.2h32.6V69h-55.6"/>
+      <path id="display" fill="#e44d26" d="M107.6 471l-33-370.4h362.8l-33 370.2L255.7 512"/>
+      <path fill="#f16529" d="M256 480.5V131H404.3L376 447"/>
+      <path fill="#ebebeb" d="M142 176.3h114v45.4h-64.2l4.2 46.5h60v45.3H154.4M156.4 336.3H202l3.2 36.3 50.8 13.6v47.4l-93.2-26"/>
+      <path fill="#fff" d="M369.6 176.3H255.8v45.4h109.6M361.3 268.2H255.8v45.4h56l-5.3 59-50.7 13.6v47.2l93-25.8"/>
+      <script>
+        var test = document.getElementById('display');
+        setTimeout(function() { test.style="display: none"; }, 1000)
+      </script>    
+    </svg>
+
     <h1>Überschrift 1</h1>
-    <h2>Überschrift 2</h2>
-    <h3>Überschrift 3</h3>
 
     <p>
       Hallo R+V
@@ -50,17 +61,6 @@
       <span>TEST</span>
       <a href="//angular.schule">Angular-Schule</a>
 
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="100">
-        <path d="M108.4 0h23v22.8h21.2V0h23v69h-23V46h-21v23h-23.2M206 23h-20.3V0h63.7v23H229v46h-23M259.5 0h24.1l14.8 24.3L313.2 0h24.1v69h-23V34.8l-16.1 24.8l-16.1-24.8v34.2h-22.6M348.7 0h23v46.2h32.6V69h-55.6"/>
-        <path id="display" fill="#e44d26" d="M107.6 471l-33-370.4h362.8l-33 370.2L255.7 512"/>
-        <path fill="#f16529" d="M256 480.5V131H404.3L376 447"/>
-        <path fill="#ebebeb" d="M142 176.3h114v45.4h-64.2l4.2 46.5h60v45.3H154.4M156.4 336.3H202l3.2 36.3 50.8 13.6v47.4l-93.2-26"/>
-        <path fill="#fff" d="M369.6 176.3H255.8v45.4h109.6M361.3 268.2H255.8v45.4h56l-5.3 59-50.7 13.6v47.2l93-25.8"/>
-        <script>
-          var test = document.getElementById('display');
-          setTimeout(function() { test.style="display: none"; }, 1000)
-        </script>    
-      </svg>
 
     </p>
 
