using webfonts from NPM

--- a/html5-playground/index.html
+++ b/html5-playground/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Workshop!</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/roboto-fontface/css/roboto/roboto-fontface.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     <link href="style.css" rel="stylesheet">
 
   </head>
@@ -13,7 +13,7 @@
     <div id="hallo"></div>
    
     <i class="fa fa-heart"></i>
-
+    <i class="fa fa-html5"></i>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="100">
       <path d="M108.4 0h23v22.8h21.2V0h23v69h-23V46h-21v23h-23.2M206 23h-20.3V0h63.7v23H229v46h-23M259.5 0h24.1l14.8 24.3L313.2 0h24.1v69h-23V34.8l-16.1 24.8l-16.1-24.8v34.2h-22.6M348.7 0h23v46.2h32.6V69h-55.6"/>
