--- a/webpack-playground/src/index.html
+++ b/webpack-playground/src/index.html
@@ -8,7 +8,31 @@
 
   <body>
 
-    <h1>Hallo Bootstrap! ❤️😂🍔</h1>
+    <div class="container"> 
+      <div class="super-jumbotron"> 
+        <h1>Hallo Bootstrap! ❤️😂🍔</h1>
+      </div>
+
+      <button class="btn btn-primary">Kick mich</button>
+
+      <div class="row mt-4">
+
+        <div class="col-sm-4">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit...
+        </div>
+        <div class="col-sm-4">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit...
+        </div>
+        <div class="col-sm-4">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit...
+        </div>
+
+      </div>
+    </div>
+
+    <footer class="footer">
+      Hallo Ich bin der Footer
+    </footer>
 
     <script src="js/main.min.js"></script>
   </body>
